Chuan bi Deploy Render: Dockerfile fix va Application properties